# django-stripe-lite

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  mypy.ini  pyproject.toml  settings.py  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: django_stripe.yml  tox.yml
django_stripe/: __init__.py  admin.py  apps.py  settings.py  urls.py  webhook_view.py  webhooks.py
django_stripe/db/: fields.py
django_stripe/migrations/: 0001_initial.py
django_stripe/models/: __init__.py  base.py  webhook_event.py
django_stripe/utils/: request.py
tests/: settings.py  test_django_stripe.py  test_webhook_view.py  test_webhooks.py  urls.py
tests/utils/: test_request.py
