[tool.poetry]
name = "django-stripe-lite"
version = "0.4.0"
description = "A library to aid Django integration with Stripe."
license = "MIT"
authors = ["YunoJuno <code@yunojuno.com>"]
maintainers = ["YunoJuno <code@yunojuno.com>"]
readme = "README.md"
homepage = "https://github.com/yunojuno/django-stripe-lite"
repository = "https://github.com/yunojuno/django-stripe-lite"
documentation = "https://github.com/yunojuno/django-stripe-lite"
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
packages = [{ include = "django_stripe" }]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.2 || ^4.0"
stripe = "^2.76.0"

[tool.poetry.dev-dependencies]
black = "*"
coverage = "*"
dephell = "*"
flake8 = "*"
flake8-bandit = "*"
flake8-blind-except = "*"
flake8-docstrings = "*"
flake8-logging-format = "*"
flake8-print = "*"
freezegun = "*"
isort = "*"
mypy = "*"
pre-commit = "*"
pytest = "*"
pytest-cov = "*"
pytest-django = "*"
tox = "*"

[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}

[build-system]
requires = ["poetry>=1.0.5"]
build-backend = "poetry.masonry.api"
