[tool.poetry]
name = "django-stripe-lite"
version = "0.7.0"
description = "A library to aid Django integration with Stripe."
license = "MIT"
authors = ["YunoJuno <code@yunojuno.com>"]
maintainers = ["YunoJuno <code@yunojuno.com>"]
readme = "README.md"
homepage = "https://github.com/yunojuno/django-stripe-lite"
repository = "https://github.com/yunojuno/django-stripe-lite"
documentation = "https://github.com/yunojuno/django-stripe-lite"
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.2",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
packages = [{ include = "django_stripe" }]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2 || ^5.0 || ^5.2"
stripe = "^5.0.0"

[tool.poetry.dev-dependencies]
coverage = "*"
freezegun = "*"
mypy = "*"
pre-commit = "*"
pytest = "*"
pytest-cov = "*"
pytest-django = "*"
ruff = "*"
tox = "*"

[build-system]
requires = ["poetry>=1.0.5"]
build-backend = "poetry.masonry.api"
